--- a/.env
+++ b/.env
@@ -2,15 +2,16 @@ MONGO_URI=mongodb+srv://tahayousuf26:ATHiJghPuAbjju54@cluster0.bau3o.mongodb.net
 PORT=5000
 
 JWT_SECRET =bdkxabkxkakbsakdkhosojaoxnnkknska
+JWT_SHOP_SECRET =BDKWKKQWNDXKKSXKBSJAVCJUVSDBJABSKNKASL
 ACTIVATION_SECRET = 6163136131
 
 
 
-ACCESS_TOKEN_EXPIRES = 5
-REFRESH_TOKEN_EXPIRES = 3
+ACCESS_TOKEN_EXPIRES = 864000
+REFRESH_TOKEN_EXPIRES = 864000
 
 
-ACCESS_TOKEN='b0PorJlw3an#[vFX~FU_1+=4CN^j9\C+\\"CWINE£30Cm/mVUCkb'
+ACCESS_TOKEN_SECRET='b0PorJlw3an#[vFX~FU_1+=4CN^j9\C+\\"CWINE£30Cm/mVUCkb'
 REFRESH_TOKEN='laMz6D8P[@^$Es1Kk5\'05s2"K5rZ(`0&hCi^f{62k672-#M?f£'
 
 SMTP_HOST =smtp.gmail.com  
