farmers profile iamge cloudainary

--- a/.env
+++ b/.env
@@ -22,8 +22,10 @@ SMTP_PASSWORD =tmtnulnnlizeybhl
 
 
 
-CLOUD_NAME =dfbhqvpmw
-CLOUD_API_KEY = 751921924672462
-CLOUD_SECRET_KEY = pCDoS3gOFztLBItfAIQzYJl7WUE
+CLOUDINARY_API_KEY = 213546125456328
+
+
+CLOUDINARY_CLOUD_NAME = dfbhqvpmw 
+CLOUDINARY_API_SECRET = R2OVeebqPHf4Bl81eu1ax8R9p3k
 
 NODE_ENV = developmet
